# Keep bazel_compatibility in sync with sonic-buildimage's .bazelversion.
module(
    name = "sonic-dash-api",
    bazel_compatibility = [">=8.5.1", "<=8.5.1"],
)

bazel_dep(name = "protobuf", version = "33.4")
bazel_dep(name = "googletest", version = "1.17.0")
bazel_dep(name = "bazel_lib", version = "3.1.1")
bazel_dep(name = "tar.bzl", version = "0.8.1")

bazel_dep(name = "sonic-build-infra", version = "0.0.0")
local_path_override(
    module_name = "sonic-build-infra",
    path = "../sonic-build-infra",
)

register_toolchains("@sonic-build-infra//toolchains/gcc:host_gcc_toolchain")

bazel_dep(name = "rules_distroless", version = "0.6.1")
local_path_override(
  module_name = "rules_distroless",
  path = "../rules_distroless",
)

apt = use_extension("@rules_distroless//apt:extensions.bzl", "apt")

apt.sources_list(
    architectures = ["amd64"],
    components = ["main"],
    suites = ["bookworm", "bookworm-updates"],
    uris = ["https://snapshot.debian.org/archive/debian/20251001T023456Z"],
)
apt.sources_list(
    architectures = ["amd64"],
    components = ["main"],
    suites = ["bookworm-security"],
    uris = ["https://snapshot.debian.org/archive/debian-security/20251001T023456Z"],
)

apt.install(
    dependency_set = "bookworm",
    suites = ["bookworm", "bookworm-updates", "bookworm-security"],
    packages = [
        "swig",
        "libboost-dev",
        "python3-dev",
    ]
)

apt.lock(into = ":packages.lock")

use_repo(apt, "bookworm")
